syntax = "proto3";

package auth;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/atlasir0/Chat_service/grpc/pkg/note_v1;note_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Auth API"
    version: "1.0.0"
    contact: {
      name: "Rinat Kurmakaev"
      email: "rik.sadasd@gmail.com"
    };
  };

  host: "localhost:8080",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service UserService {

	//Создание пользователя
  rpc Create(CreateRequest) returns (CreateResponse){
	option (google.api.http) = {
		post: "/user/v1"
		body: "*"
	};
  }

  //Получение информации о пользователе
  rpc Get(GetRequest) returns (GetResponse){
	option (google.api.http) = {
		get:"/user/v1"
	};
  }

  //Обновление информации о пользователе
  rpc Update(UpdateRequest) returns (google.protobuf.Empty){
	option (google.api.http) = {
		patch: "/user/v1"
		body: "*"
	};
  }

  //Удаление пользователя
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
	option (google.api.http) = {
		delete:"/user/v1"
	};
  }
}



enum UserRole {
  USER    = 0;
  ADMIN   = 1;
}

message User {
  string name = 1 [(validate.rules).string = {min_len: 1, max_len: 50}];
  string email = 2 [(validate.rules).string.email = true];
  string password = 3;
  string password_confirm = 4;
  UserRole role = 5;
}

message UserInfo {
  int64 id = 1;
  string name = 2;
  string email = 3;
  UserRole role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateUser {
  google.protobuf.StringValue name = 1 [(validate.rules).string = {ignore_empty: true, min_len: 1, max_len: 50}];
  google.protobuf.StringValue email = 2 [(validate.rules).string = {email: true, ignore_empty: true}];
  google.protobuf.StringValue password = 3;
  google.protobuf.StringValue password_confirm = 4;
  UserRole role = 5;
}

message CreateRequest {
  User user = 1;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  UserInfo info = 1;
}

message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  UserRole role = 4;
}

message DeleteRequest {
  int64 id = 1;
}